--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./index.html">Produits</a>
+                <a class="nav-link" href="index.html">Produits</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -106,7 +106,7 @@
 
         <!-- Produits -->
         <section id="">
-        <div class="container-fluid" id="produits-cards" >
+        <div class="container-fluid" id="produits-cards">
             <h1 class="text-center">Produits</h1>
             <div class="row">
                 <div class="col-md-3 col-sm-12 py-3 py-md-0">
@@ -674,16 +674,16 @@
 
         <!-- Temoignages -->
 
-        <div class="container-fluid" id="Temoignages">
-            <div class="bg-light">
-                <h1>Témoignages</h1>
-                <h2>Lisez ce que dis nos clients</h2>
+        <div class="container" id="Temoignages">
+            <div class="">
+                <h1 class="fw-bold">Témoignages</h1>
+                <h2 class="fw-bold">Lisez ce que dis nos clients</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit possimus quisquam quaerat repellat beatae, inventore ab quia iure vero voluptatum sequi nihil. 
                     Culpa distinctio quisquam ad perspiciatis exercitationem eveniet repellat.</p>
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-12">
-                    <div class="card bg-light my-2">
+                    <div class="card radjj bg-light my-2">
                         <div class="card-body clients d-flex gap-5">
                             <div class="clients-img">
                                 <img src="./images/photo-studio-fille-peau-foncee-positive.jpg" alt="" class="img-fluid">
@@ -700,7 +700,7 @@
 
 
                 <div class="col-md-4 col-sm-12">
-                    <div class="card bg-success text-white my-2">
+                    <div class="card radjj bg-success text-white my-2">
                         <div class="card-body clients d-flex gap-5">
                             <div class="clients-img">
                                 <img src="./images/portrait-taille-beau-homme.jpg" alt="" class="img-fluid">
@@ -716,7 +716,7 @@
                 </div>
 
                 <div class="col-md-4 col-sm-12">
-                    <div class="bg-info my-2">
+                    <div class="card  radjj bg-info my-2">
                         <div class="card-body clients d-flex gap-5">
                             <div class="clients-img">
                                 <img src="./images/heureuse-jeune-femme-musulmane.jpg" alt="" class="img-fluid">
