--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="index.html">Produits</a>
+                    <a class="nav-link" href="#produits-cards">Produits</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -77,7 +77,7 @@
           </nav>
 
     </div>
-    
+
       <!-- home -->
 
       <section class="home my-5 bg-light">
@@ -107,7 +107,7 @@
       <!-- njeexital home -->
 
         <!-- Produits -->
-        <section id="">
+        <section id="produits-cards">
         <div class="container-fluid" id="produits-cards">
             <h1 class="text-center">Produits</h1>
             <div class="row">
